--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,51 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="165dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
+    android:padding="16dp"
     android:background="@color/colorPrimary">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/icon_image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="12dp"
         app:civ_border_width="1dp"
-        app:civ_border_color="@android:color/white"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="8dp"
+        app:civ_border_color="@color/textSecondaryInDark"
         android:src="@drawable/nav_icon" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/nav_photo"
+        android:layout_width="120dp"
+        android:layout_height="96dp"
+        android:layout_marginTop="4dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="8dp"
+        android:scaleType="fitEnd" />
+
+    <TextView
+        android:id="@+id/username"
+        android:layout_above="@id/usersign"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/icon_image"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
+        android:layout_marginTop="8dp"
+        android:textSize="16sp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textColor="@color/textPrimaryInDark"
+        android:text="行动派の小阿宅" />
 
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="行动派の小阿宅"
-            android:textColor="#FFF"
-            android:textSize="16dp"
-            android:layout_marginTop="8dp"/>
-
-        <TextView
-            android:id="@+id/usersign"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="今天又是元气满满的一天，很高兴在这里分享我的英雄笔记。"
-            android:textColor="#FFF"
-            android:textSize="12dp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_marginTop="2dp" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/usersign"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:textSize="12sp"
+        android:lines="2"
+        android:ellipsize="end"
+        android:textColor="@color/textPrimaryInDark"
+        android:text="今天又是元气满满的一天，很高兴在这里分享我的英雄笔记。" />
 
 </RelativeLayout>
