--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -6,13 +6,12 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@mipmap/home"
-            android:checked="false"
             android:title="首页" />
             
-        <item
-            android:id="@+id/hot"
-            android:icon="@mipmap/hot"
-            android:title="热点" />
+        <!--<item-->
+            <!--android:id="@+id/hot"-->
+            <!--android:icon="@mipmap/hot"-->
+            <!--android:title="热点" />-->
     </group>
 
     <group android:id="@+id/g1"
